--- a/projet/JO/styles.css
+++ b/projet/JO/styles.css
@@ -105,3 +105,12 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+.wrap {
+    display: flex;
+    justify-content: center;
+}
+
+.iframe {
+    max-width: 100%;
+}
